# hi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  hi.cbp
DEBIAN/: control  hi.manpages  install  postinst  prerm
autocomplete/: hi
data/encodings/: troels.json
debian/: install  postinst  preinst  prerm
dlib-build/: Makefile  cmake_install.cmake
dlib-build/dlib/: Makefile  cmake_install.cmake  dlib.cbp
lib/dlib-19.13/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
lib/dlib-19.13/dlib/: Makefile  cmake_install.cmake  config.h  dlib-1.pc
lib/dlib-19.13/dlib/config/: dlibConfigVersion.cmake
lib/dlib-19.13/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  cnn_face_detector.py.html  compile.html  compression.html  containers.html  correlation_tracker.py.html  face_alignment.py.html  face_clustering.py.html  face_detector.py.html  face_jitter.py.html  face_landmark_detection.py.html  face_recognition.py.html  faq.html  find_candidate_object_locations.py.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  max_cost_assignment.py.html  metaprogramming.html  ml.html  network.html  (+14 more)
src/: Hi.cpp  Hi.h  HiCamera.cpp  HiCamera.h  config.ini  main.cpp  pam.py
src/test/: test.cpp
(+29 files in other folders)
